azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__directive-10.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..8
      Directive@0..8
        DirectiveToken@0..1 "%"
        ReservedDirective@1..8
          DirectiveName@1..8 "DIR#dir"
    ,
    errors: [],
}
