azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__directive-2.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..3
      Error@0..3 "foo"
    ,
    errors: [
        Diagnostic {
            span: 0..3,
            severity: Error,
            message: "expected '%'",
        },
    ],
}
